# sface

./: README.md  background.html  background.js  core.css  core.js  features.txt  manifest.json  package.json  popup.html  popup.js  sface.js  sface.scd
host/: CMakeLists.txt  com.typedef.sface-win.json  com.typedef.sface.json  install_host.bat  install_host.sh  sface  sface.bat  sface.cpp  uninstall_host.bat  uninstall_host.sh
